--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content fxFlexFill>
-  
+        <router-outlet></router-outlet>
       </mat-sidenav-content>
     </mat-sidenav-container>
   </div>
