--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,14 +7,14 @@
 
       <div class="bank">
         <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item">Dashboard</a>
+          <a mat-button *ngIf="getUserState()" [routerLink]="['/dashboard']" class="menu-item">Dashboard</a>
         </div>
       </div>
 
       <span class="spacer"></span>
       <div class="bank">
         <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-            <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item">Profile</a>
+            <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" class="menu-item">Profile</a>
             <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" class="menu-item">Login</a>
             <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item">Logout</a>
         </div>
@@ -31,8 +31,8 @@
   
       <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
         <mat-nav-list>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/login']">Dashboard</a>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/login']">Profile</a>
+          <a mat-button *ngIf="getUserState()" [routerLink]="['/dashboard']">Dashboard</a>
+          <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']">Profile</a>
           <a mat-button *ngIf="getUserState()" [routerLink]="['/login']">Logout</a>
           <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']">Login</a>
         </mat-nav-list>
