Finished login template

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -43,7 +43,7 @@
 }
 
 .mat-sidenav-container {
-  background-color: lightskyblue;
+  // background-color: lightskyblue;
   min-height: 93vh !important;
 }
 
