Finished template for register component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,7 +29,7 @@
             <small><a [routerLink]="['/forgot']">Forgot your password?</a></small>
         </div>
         <div>
-            <small>Don't have an account? <a [routerLink]="['/signup']">Sign Up</a></small>
+            <small>Don't have an account? <a [routerLink]="['/register']">Sign Up</a></small>
         </div>
     </div>
 </div>
