--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,16 @@
 <div class="profile-container">
-    
+    <header class="username-container">
+        <h1>Profile details</h1>
+    </header>
+
+    <div class="details-container">
+        <mat-list role="tabs">
+            <mat-list-item role="listitem">Tab1</mat-list-item>
+            <mat-list-item role="listitem">Tab2</mat-list-item>
+        </mat-list>
+
+        <section>
+            alabala
+        </section>
+    </div>
 </div>
