--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,13 +4,23 @@
     </header>
 
     <div class="details-container">
-        <mat-list role="tabs">
-            <mat-list-item role="listitem">Tab1</mat-list-item>
-            <mat-list-item role="listitem">Tab2</mat-list-item>
+        <mat-list class="tabs">
+            <mat-list-item class="tab-item" role="listitem">
+                Details
+            </mat-list-item>
+            <mat-list-item class="tab-item" role="listitem">
+                Reset password
+            </mat-list-item>
         </mat-list>
 
         <section>
             alabala
         </section>
     </div>
+
+    <!-- <mat-tab-group mat-align-tabs="center">
+        <mat-tab label="My profile">Content 1</mat-tab>
+        <mat-tab label="Reset password">Content 2</mat-tab>
+    </mat-tab-group> -->
+
 </div>
