--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -15,6 +15,8 @@
 
         <section>
             alabala
+            <app-profile-details></app-profile-details>
+            <app-reset-password></app-reset-password>
         </section>
     </div>
 
