--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,21 +5,26 @@
 
     <div class="details-container">
         <mat-list class="tabs">
-            <mat-list-item class="tab-item" role="listitem">
-                <button mat-button (click)="tabOption = 1">Details</button>
-            </mat-list-item>
-            <mat-list-item class="tab-item" role="listitem">
-                <button mat-button (click)="tabOption = 2">Reset password</button>
-            </mat-list-item>
+            <button mat-button class="tab-item" (click)="tabOption = 1">Details</button>
+            <button mat-button class="tab-item" (click)="tabOption = 2">Reset password</button>
         </mat-list>
 
         <section>
-            alabala
             <ng-container [ngSwitch]="tabOption">
                 <app-profile-details *ngSwitchCase="1"></app-profile-details>
                 <app-reset-password *ngSwitchCase="2"></app-reset-password>
             </ng-container>
         </section>
     </div>
+
+    <!-- this will be used for mobile view -->
+    <mat-tab-group mat-align-tabs="center" class="details-tabs">
+        <mat-tab label="My profile">
+            <app-profile-details></app-profile-details>
+        </mat-tab>
+        <mat-tab label="Reset password">
+            <app-reset-password></app-reset-password>
+        </mat-tab>
+    </mat-tab-group>
 
 </div>
