Details component mostly styled

--- a/src/app/profile-details/profile-details.component.html
+++ b/src/app/profile-details/profile-details.component.html
@@ -1,1 +1,75 @@
-<p>profile-details works!</p>
+<div class="details-container">
+    <form [formGroup]="detailsForm">
+        <div class="form-group">
+            <mat-form-field appearance="fill">
+                <mat-label>Enter your email</mat-label>
+                <input matInput placeholder="Your email" formControlName="email">
+                <button mat-icon-button matSuffix [disabled]="true">
+                    <mat-icon>alternate_email</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.email.invalid">{{ getEmailErrorMessage() }}</mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Enter your username</mat-label>
+                <input matInput placeholder="Your username" formControlName="username">
+                <button mat-icon-button matSuffix [disabled]="true">
+                    <mat-icon>account_circle</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.username.invalid">Please complete the username</mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Study institution</mat-label>
+                <input matInput placeholder="Your username" formControlName="username">
+                <button mat-icon-button matSuffix [disabled]="true">
+                    <mat-icon>location_city</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.studyInstitution.invalid">Please complete study institution</mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Faculty</mat-label>
+                <input matInput placeholder="Your username" formControlName="username">
+                <button mat-icon-button matSuffix [disabled]="true">
+                    <mat-icon>domain</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.faculty.invalid">Please complete faculty</mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Department</mat-label>
+                <input matInput placeholder="Your username" formControlName="username">
+                <button mat-icon-button matSuffix [disabled]="true">
+                    <mat-icon>school</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.department.invalid">Please complete faculty department</mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Study year</mat-label>
+                <input matInput placeholder="Your username" formControlName="username">
+                <mat-error *ngIf="detailsForm.controls.studyYear.invalid">Please complete study year</mat-error>
+            </mat-form-field>
+            
+
+            <!-- <mat-form-field appearance="fill">
+                <mat-label>Confirm password</mat-label>
+                <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="confirmPassword">
+                    <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
+                <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
+                </button>
+                <mat-error *ngIf="detailsForm.controls.confirmPassword.invalid">{{ getConfirmPasswordError() }}</mat-error>
+            </mat-form-field> -->
+        </div>
+    </form>
+    <button class="register-button" mat-raised-button (click)="submit()" [disabled]="detailsForm.invalid">REGISTER</button>
+
+    <div class="tips">
+        <div>
+            <small>Already have an account? <a [routerLink]="['/login']">Sign in</a></small>
+        </div>
+    </div>
+</div>
+
+
