--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -27,6 +27,9 @@
         <mat-tab label="Reset password">
             <app-reset-password></app-reset-password>
         </mat-tab>
+        <mat-tab label="Delete account">
+            <app-delete-user></app-delete-user>
+        </mat-tab>
     </mat-tab-group>
 
 </div>
