--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -22,6 +22,7 @@
 .details-container {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    margin-bottom: 50px;
 
     .tabs {
         display: flex;
