--- a/src/app/profile-details/profile-details.component.scss
+++ b/src/app/profile-details/profile-details.component.scss
@@ -13,3 +13,12 @@
         width: 100%;
     }
 }
+
+.submit-button {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: rgb(97, 26, 26);
+    color: white;
+}
