--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,1 +1,23 @@
-<p>reset-password works!</p>
+<div class="reset-password-container">
+    <form [formGroup]="resetPasswordForm">
+        <mat-form-field appearance="outline">
+            <mat-label>New password</mat-label>
+            <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="password">
+            <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
+                <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="resetPasswordForm.controls.password.invalid">{{ getPasswordErrorMessage() }}</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline">
+            <mat-label>Confirm new password</mat-label>
+            <input matInput [type]="hideFlag ? 'password' : 'text'" formControlName="confirmPassword">
+                <button mat-icon-button matSuffix (click)="hideFlag = !hideFlag" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideFlag">
+            <mat-icon>{{ hideFlag ? 'visibility_off' : 'visibility' }}</mat-icon>
+            </button>
+            <mat-error *ngIf="resetPasswordForm.controls.confirmPassword.invalid">{{ getConfirmPasswordError() }}</mat-error>
+        </mat-form-field>
+    </form>
+
+    <button class="reset-button" mat-raised-button (click)="submit()" [disabled]="resetPasswordForm.invalid">Reset password</button>
+</div>
