Implemented delete account with alert dialog module

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -12,9 +12,11 @@
 
         <section>
             <ng-container [ngSwitch]="tabOption">
-                <app-profile-details *ngSwitchCase="1"></app-profile-details>
-                <app-reset-password *ngSwitchCase="2"></app-reset-password>
-                <app-delete-user *ngSwitchCase="3"></app-delete-user>
+                <div class="data-container">
+                    <app-profile-details *ngSwitchCase="1"></app-profile-details>
+                    <app-reset-password *ngSwitchCase="2"></app-reset-password>
+                    <app-delete-user *ngSwitchCase="3"></app-delete-user>
+                </div>
             </ng-container>
         </section>
     </div>
