--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -38,6 +38,11 @@
             color: white;
         }
     }
+
+    .data-container {
+        width: 80%;
+        margin: auto;
+    }
 }
 
 .details-tabs {
