--- a/src/app/delete-user/delete-user.component.html
+++ b/src/app/delete-user/delete-user.component.html
@@ -1,1 +1,3 @@
-<p>delete-user works!</p>
+<div class="delete-account-container">
+    <button class="delete-button" mat-raised-button (click)="openDialog()">DELETE</button>
+</div>
