--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -1,6 +1,12 @@
-.reset-password-container {
-    width: 60%;
-    margin: auto;
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+
+    mat-form-field {
+        width: 100%;
+    }
 }
 
 .reset-button {
