--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
 
     <div class="tips">
         <div>
-            <small><a [routerLink]="['/forgot']">Forgot your password?</a></small>
+            <small><a [routerLink]="['/forgot-password']">Forgot your password?</a></small>
         </div>
         <div>
             <small>Don't have an account? <a [routerLink]="['/register']">Sign Up</a></small>
