--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
 
       <div class="bank">
         <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/dashboard']" class="menu-item">Dashboard</a>
+          <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" class="menu-item">Disciplines</a>
         </div>
       </div>
 
@@ -31,7 +31,7 @@
   
       <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
         <mat-nav-list>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/dashboard']" (click)="sidenav.close()">Dashboard</a>
+          <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" (click)="sidenav.close()">Disciplines</a>
           <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" (click)="sidenav.close()">Profile</a>
           <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Logout</a>
           <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Login</a>
