--- a/src/app/profile-details/profile-details.component.html
+++ b/src/app/profile-details/profile-details.component.html
@@ -18,7 +18,12 @@
             <mat-form-field appearance="outline">
                 <mat-label>Enter your last name</mat-label>
                 <input matInput placeholder="Your last name" formControlName="lastName">
-                <mat-error *ngIf="detailsForm.controls.lastNameinvalid">Please complete the last name</mat-error>
+                <mat-error *ngIf="detailsForm.controls.lastName.invalid">Please complete the last name</mat-error>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Enter your matricol number</mat-label>
+                <input matInput placeholder="Your matricol " formControlName="registrationNumber">
+                <mat-error *ngIf="detailsForm.controls.registrationNumber.invalid">Please complete matricol no.</mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
