--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -1,24 +1,39 @@
+.disciplines-container {
+    display: flex;
+    flex-direction: column;
+}
+
 .title-container {
     background-color: aquamarine;
 }
 
-.actions-container {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+.disciplines-tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-    .tabs {
+    .no-discipline {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        background-color: rgba(97, 26, 26);
-        padding: 0;
-        border-radius: 2px;
-    }
-
-    .template-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
+    }
+}
+
+.disciplines-table {
+    width: 90%;
+    margin: auto;
+}
+
+
+
+.add-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .add-icon {
+        width: 100px;
+        height: 100px;
+        font-size: 100px;
     }
 }
