Fixed some bugs on navbar

--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -1,7 +1,7 @@
 <div class="disciplines-container">
-    <!-- <header class="title-container">
+    <header class="title-container">
         <h1>Disciplines</h1>
-    </header> -->
+    </header>
 
     <div class="disciplines-tab">
         
