--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,44 +1,42 @@
-<div> 
-    <mat-toolbar class="toolbar">
+<mat-toolbar class="toolbar">
 
-      <a mat-button class="app-name" [routerLink]="['/']">
-        <p>Distributor</p>
-      </a>
+  <a mat-button class="app-name" [routerLink]="['/']">
+    <p>Distributor</p>
+  </a>
 
-      <div class="bank">
-        <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" class="menu-item" routerLinkActive="active">Disciplines</a>
-        </div>
-      </div>
-
-      <span class="spacer"></span>
-      <div class="bank">
-        <div fxShow="true" fxHide.lt-md="true" class="menu-items">
-            <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" class="menu-item" routerLinkActive="active">Profile</a>
-            <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active">Login</a>
-            <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active">Logout</a>
-        </div>
-      </div>
-
-      <div fxShow="true" fxHide.gt-sm="true" class="mobile-menu">
-        <button mat-icon-button (click)="sidenav.toggle()" class="menu-button">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-      
-    </mat-toolbar>
-    <mat-sidenav-container fxFlexFill class="example-container">
-  
-      <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
-        <mat-nav-list>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" (click)="sidenav.close()">Disciplines</a>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" (click)="sidenav.close()">Profile</a>
-          <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Logout</a>
-          <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Login</a>
-        </mat-nav-list>
-      </mat-sidenav>
-      <mat-sidenav-content fxFlexFill>
-        <router-outlet></router-outlet>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
+  <div class="bank">
+    <div fxShow="true" fxHide.lt-md="true" class="menu-items">
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" class="menu-item" routerLinkActive="active">Disciplines</a>
+    </div>
   </div>
+
+  <span class="spacer"></span>
+  <div class="bank">
+    <div fxShow="true" fxHide.lt-md="true" class="menu-items">
+        <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" class="menu-item" routerLinkActive="active">Profile</a>
+        <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active">Login</a>
+        <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" class="menu-item" routerLinkActive="active">Logout</a>
+    </div>
+  </div>
+
+  <div fxShow="true" fxHide.gt-sm="true" class="mobile-menu">
+    <button mat-icon-button (click)="sidenav.toggle()" class="menu-button">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+  
+</mat-toolbar>
+<mat-sidenav-container fxFlexFill class="sidenav-container">
+
+  <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
+    <mat-nav-list>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/disciplines']" (click)="sidenav.close()">Disciplines</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/profile']" (click)="sidenav.close()">Profile</a>
+      <a mat-button *ngIf="getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Logout</a>
+      <a mat-button *ngIf="!getUserState()" [routerLink]="['/login']" (click)="sidenav.close()">Login</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content fxFlexFill>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
