--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -3,36 +3,49 @@
         <h1>Disciplines</h1>
     </header>
 
+    <!--POC: or i can use cards -->
+    <!-- <div class="actions-container">
+        <mat-list class="tabs">
+            <h3>List of disciplines</h3>
+            <div *ngIf="disciplines.length > 0; else noDisciplines">
+                <div *ngFor="let discipline of disciplines">
+                    {{ discipline.name }}
+                </div>
+            </div>
+            <ng-template #noDisciplines>
+                <p>No disciplines yet</p>
+            </ng-template>
+        </mat-list>
+    </div> -->
+
     <div class="disciplines-tab">
-        
+        <div *ngIf="disciplines.length > 0; else noDisciplines" class="disciplines-table">
+            <div class="table-add-button">
+                <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
+            </div>
 
-    <div *ngIf="disciplines.length > 0; else noDisciplines" class="disciplines-table">
-        <div>
-            <button mat-button (click)="openDialog()"><mat-icon>add_circle</mat-icon>Add discipline</button>
+            <table mat-table [dataSource]="myDataSource" matSort class="mat-elevation-z8" width="100%">
+                <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let element">{{element}}</td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef>
+                        actions
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="no-field-padding">
+                        <div class="icons">
+                        <mat-icon class="edit-icon" (click)="addOrEditActivity(element)">edit</mat-icon>
+                        <mat-icon class="delete-icon" (click)="deleteActivity(element)">delete</mat-icon>
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="['name', 'actions']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['name', 'actions']"></tr>
+            </table>
         </div>
-
-        <table mat-table [dataSource]="myDataSource" matSort class="mat-elevation-z8" width="100%">
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>Name</th>
-              <td mat-cell *matCellDef="let element">{{element}}</td>
-            </ng-container>
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef>
-                    actions
-                </th>
-                <td mat-cell *matCellDef="let element" class="no-field-padding">
-                    <div class="icons">
-                      <mat-icon class="edit-icon" (click)="addOrEditActivity(element)">edit</mat-icon>
-                      <mat-icon class="delete-icon" (click)="deleteActivity(element)">delete</mat-icon>
-                    </div>
-                  </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="['name', 'actions']"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['name', 'actions']"></tr>
-          </table>
-    </div>
-    
     <div>
+
     <ng-template #noDisciplines>
         <div class="no-discipline">
             <button mat-button (click)="openDialog()">
@@ -44,8 +57,4 @@
             You've not selected any discipline
         </div>
     </ng-template>
-</div>
-
-    </div>
-
 </div>
