--- a/src/app/disciplines/disciplines.component.scss
+++ b/src/app/disciplines/disciplines.component.scss
@@ -8,6 +8,7 @@
 }
 
 .disciplines-tab {
+    padding-top: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,6 +17,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .table-add-button {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
     }
 }
 
