--- a/src/app/add-discipline-dialog/add-discipline-dialog.component.html
+++ b/src/app/add-discipline-dialog/add-discipline-dialog.component.html
@@ -3,7 +3,7 @@
   <mat-form-field appearance="fill" class="content">
     <mat-label>Faculty discipline</mat-label>
     <mat-select  [(ngModel)]="data.selected">
-        <mat-option *ngFor="let discipline of data.disciplines" [value]="discipline.name">
+        <mat-option *ngFor="let discipline of data.disciplines" [value]="discipline">
           {{ discipline.name }}
         </mat-option>
       </mat-select> 
