--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -27,7 +27,7 @@
             <table mat-table [dataSource]="myDataSource" matSort class="mat-elevation-z8" width="100%">
                 <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element">{{element}}</td>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
                 </ng-container>
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef>
@@ -41,7 +41,7 @@
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="['name', 'actions']"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['name', 'actions']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['name', 'actions']" (click)="getSelectedRow(row)"></tr>
             </table>
         </div>
     <div>
