--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -15,7 +15,7 @@
                 <p>No disciplines yet</p>
             </ng-template>
         </mat-list>
-        lroem ipsum aici pun chestii de preferinte per disciplina
+        <app-discipline-preferences></app-discipline-preferences>
     </div>
 
 </div>
