--- a/src/app/discipline-preferences/discipline-preferences.component.html
+++ b/src/app/discipline-preferences/discipline-preferences.component.html
@@ -5,42 +5,12 @@
             <mat-form-field appearance="outline">
                     <mat-label>Option 1</mat-label>
                     <mat-select formControlName="option1">
-                      <mat-option *ngFor="let preference of disciplinePreferences" [value]="option1">
+                      <mat-option *ngFor="let preference of disciplinePreferences" [value]="preference">
                         {{ preference.value }}
                       </mat-option>
                     </mat-select>    
-                <mat-error *ngIf="preferencesForm.controls.option1.invalid">Please complete study institution</mat-error>
+                <mat-error *ngIf="preferencesForm.controls.option1.invalid">Please complete option</mat-error>
             </mat-form-field>
-
-            <!-- <mat-form-field appearance="outline">
-                <mat-label>Option 2</mat-label>
-                <mat-select formControlName="faculty">
-                    <mat-option *ngFor="let faculty of faculties" [value]="faculty">
-                      {{ faculty }}
-                    </mat-option>
-                  </mat-select>  
-                <mat-error *ngIf="preferencesForm.controls.faculty.invalid">Please complete faculty</mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-                <mat-label>Option 3</mat-label>
-                <mat-select formControlName="department">
-                    <mat-option *ngFor="let department of departments" [value]="department">
-                      {{ department }}
-                    </mat-option>
-                </mat-select> 
-                <mat-error *ngIf="preferencesForm.controls.department.invalid">Please complete faculty department</mat-error>
-            </mat-form-field>
-
-            <mat-form-field appearance="outline">
-                <mat-label>Option 4</mat-label>
-                <mat-select formControlName="studyYear">
-                    <mat-option *ngFor="let year of years" [value]="year">
-                      {{ year }}
-                    </mat-option>
-                </mat-select> 
-                <mat-error *ngIf="preferencesForm.controls.studyYear.invalid">Please complete study year</mat-error>
-            </mat-form-field> -->
         </div>
     </form>
     <button class="submit-button" mat-raised-button (click)="submit()" [disabled]="preferencesForm.invalid">SAVE</button>
