--- a/src/app/disciplines/disciplines.component.html
+++ b/src/app/disciplines/disciplines.component.html
@@ -29,6 +29,10 @@
                 <th mat-header-cell *matHeaderCellDef>Name</th>
                 <td mat-cell *matCellDef="let element">{{element.name}}</td>
                 </ng-container>
+                <ng-container matColumnDef="teacher">
+                    <th mat-header-cell *matHeaderCellDef>Teacher</th>
+                    <td mat-cell *matCellDef="let element">{{element.teacher}}</td>
+                    </ng-container>
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef>
                         actions
@@ -40,8 +44,8 @@
                         </div>
                     </td>
                 </ng-container>
-                <tr mat-header-row *matHeaderRowDef="['name', 'actions']"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['name', 'actions']" (click)="getSelectedRow(row)"></tr>
+                <tr mat-header-row *matHeaderRowDef="['name', 'teacher', 'actions']"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['name', 'teacher', 'actions']" (click)="getSelectedRow(row)"></tr>
             </table>
         </div>
     <div>
