--- a/src/app/preferences/preferences.component.html
+++ b/src/app/preferences/preferences.component.html
@@ -8,14 +8,16 @@
             <h3>List of your disciplines</h3>
             <div *ngIf="disciplines.length > 0; else noDisciplines">
                 <div *ngFor="let discipline of disciplines">
-                    {{ discipline.name }}
+                    <button mat-button class="tab-item" (click)="selectDiscipline(discipline)">{{ discipline.name }}</button>
                 </div>
             </div>
             <ng-template #noDisciplines>
                 <p>No disciplines yet</p>
             </ng-template>
         </mat-list>
-        <app-discipline-preferences></app-discipline-preferences>
+        <div *ngIf="tabOption">
+            <app-discipline-preferences [discipline]="tabOption"></app-discipline-preferences>
+        </div>
     </div>
 
 </div>
