Partially integrated getting a single user service

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
     <header class="username-container">
         <h1>Profile details</h1>
     </header>
-
+{{user | json}}
     <div class="details-container">
         <mat-list class="tabs">
             <button mat-button class="tab-item" (click)="tabOption = 1">Details</button>
